--- a/sections/main-values.liquid
+++ b/sections/main-values.liquid
@@ -44,7 +44,7 @@
     {
       "type": "image_picker",
       "id": "video-thumbnail",
-      "label": "Video 1 thumbnail image"
+      "label": "Video  thumbnail image"
     },
       {
         "id": "icon-1",
