--- a/sections/main-values.liquid
+++ b/sections/main-values.liquid
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div class="values-video-wrapper">
-      <video id="valuesVideo" playsinline poster="{{section.settings.video-thumbnail | image_url 'large' }}>
+      <video id="valuesVideo" playsinline poster="{{section.settings.video-thumbnail | image_url 'large' }}">
         <source src="{{'walkIn.mp4' | asset_url }}" type="video/mp4" id="valuesVid">
       </video>
       <div class="video-controll-overlay" id="valuesOverlay">
