--- a/sections/contact-info.liquid
+++ b/sections/contact-info.liquid
@@ -31,9 +31,9 @@
             <div class="icon-wrapper">
               <img class="info-icon" src="{{'calendarIcon.svg' | asset_url }}" alt="Calendar icon">
               <ul class="icon-list">
-                <li>Tu & We:</li>
-                <li>Th & Fr:</li>
-                <li>Sa:</li>
+                <li>Tuesday & Wednesday:</li>
+                <li>Thursday & Friday:</li>
+                <li>Saturday:</li>
               </ul>
             </div>
             <div>
@@ -112,8 +112,8 @@
             <div class="icon-wrapper">
               <img class="info-icon" src="{{'calendarIcon.svg' | asset_url }}" alt="Calendar icon">
               <ul class="icon-list">
-                <li>Mo & Fr:</li>
-                <li>Sa:</li>
+                <li>Monday - Friday:</li>
+                <li>Saturday:</li>
               </ul>
             </div>
             <div>
