--- a/assets/section-values.css
+++ b/assets/section-values.css
@@ -28,9 +28,9 @@ margin-top: 0;
   width: 100%;
   max-height: 78px;
 }
-#valuesVideo{
+.valuesVideo{
   width: 100%;
-  height: 100%;
+  height: 510px;
 }
 .play-icon-wrapper{
   display: flex;
@@ -110,5 +110,9 @@ filter: drop-shadow(0px 10px 4px rgba(0, 0, 0, 0.25));
      }
     .values-video-wrapper{
       margin-bottom: 40px;
+    }
+    .valuesVideo{
+      width: 100%;
+      height: 410px;
     }
 }
