--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -74,6 +74,25 @@
     <div class="container-main" id="header-div">
       <div class="header-div1">
         <!-- <h4 class="language-heading">EN</h4><span></span> -->
+        <!-- GTranslate: https://gtranslate.io/ -->
+        <select onchange="doGTranslate(this);" class="languageSelect">
+          <option value="en|en">EN</option>
+          <option value="en|de">DE</option>
+        </select>
+        <style>#goog-gt-tt{display:none !important;}.goog-te-banner-frame{display:none !important;}.goog-te-menu-value:hover{text-decoration:none !important;}.goog-text-highlight{background-color:transparent!important;box-shadow:none!important;}body{top:0 !important;}#google_translate_element2{display:none!important;}</style>
+        <div id="google_translate_element2"></div>
+        <script>
+        function googleTranslateElementInit2() {
+          new google.translate.TranslateElement({
+            pageLanguage:'en',
+            autoDisplay:false},'google_translate_element2');}
+            if(!window.gt_translate_script){window.gt_translate_script=document.createElement('script');gt_translate_script.src='https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit2';document.body.appendChild(gt_translate_script);}</script>
+        
+        <script>
+        if(typeof GTranslateGetCurrentLang != 'function')function GTranslateGetCurrentLang() {var keyValue = document.cookie.match('(^|;) ?googtrans=([^;]*)(;|$)');return keyValue ? keyValue[2].split('/')[2] : null;}
+        function GTranslateFireEvent(element,event){try{if(document.createEventObject){var evt=document.createEventObject();element.fireEvent('on'+event,evt)}else{var evt=document.createEvent('HTMLEvents');evt.initEvent(event,true,true);element.dispatchEvent(evt)}}catch(e){}}
+        function doGTranslate(lang_pair){if(lang_pair.value)lang_pair=lang_pair.value;if(lang_pair=='')return;var lang=lang_pair.split('|')[1];if(GTranslateGetCurrentLang() == null && lang == lang_pair.split('|')[0])return;if(typeof ga == 'function'){ga('send', 'event', 'GTranslate', lang, location.hostname+location.pathname+location.search);}else{if(typeof _gaq!='undefined')_gaq.push(['_trackEvent', 'GTranslate', lang, location.hostname+location.pathname+location.search]);}var teCombo;var sel=document.getElementsByTagName('select');for(var i=0;i<sel.length;i++)if(/goog-te-combo/.test(sel[i].className))teCombo=sel[i];if(document.getElementById('google_translate_element2')==null||document.getElementById('google_translate_element2').innerHTML.length==0||teCombo.length==0||teCombo.innerHTML.length==0){setTimeout(function(){doGTranslate(lang_pair)},500)}else{teCombo.value=lang;GTranslateFireEvent(teCombo,'change');GTranslateFireEvent(teCombo,'change')}}
+        </script>
       </div>
       <div class="header-div2">
         <a href="{{ shop.url }}"><img  src="{{'logo-white.svg'| asset_url }}" alt="Brothers barbershop logo" class="header-logo"></a>
