--- a/sections/main-values.liquid
+++ b/sections/main-values.liquid
@@ -41,7 +41,7 @@
   </div>
   
 </div>
-{{ 'values-video-controll.js'  | asset_url | script_tag     }}
+<!-- {{ 'values-video-controll.js'  | asset_url | script_tag     }} -->
 {% schema %}
   {
     "name": "Values",
