--- a/assets/section-awards.css
+++ b/assets/section-awards.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url(awardBG.svg);
+  /* background: url(awardBG.svg); */
   background-size: contain;
   background-repeat: no-repeat;
   display: flex;
@@ -20,8 +20,23 @@ line-height: 150%;
 text-align: center;
 color: #242424;
 }
+.award-badge-row{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
 .award-badge{
   background: url(awardBadge.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+filter: drop-shadow(0px 6px 4px rgba(0, 0, 0, 0.25));
+width: 220px;
+height: 220px;
+
+}
+.award-badge-2{
+  background: url(awardBadgeNew.png);
   background-repeat: no-repeat;
   background-size: contain;
 filter: drop-shadow(0px 6px 4px rgba(0, 0, 0, 0.25));
@@ -43,7 +58,7 @@ font-size: 30px;
     background-position-y: 20%;
     
   }
-  .award-badge{
+  .award-badge,.award-badge-2{
     width: 140px;
   height: 140px;
   bottom: 10%;
@@ -64,7 +79,7 @@ font-size: 30px;
    
     
   } */
-  .award-badge{
+  .award-badge,.award-badge-2{
     width: 200px;
   height: 200px;
   bottom: 0%;
