--- a/sections/main-awards.liquid
+++ b/sections/main-awards.liquid
@@ -2,7 +2,10 @@
 <div class="awards-section-wrapper">
   <div class="awards-content-wrapper">
     <h2 class="award-text">{{ section.settings.awards-title }}</h2>
-      <div class="award-badge"></div>
+      <div class="award-badge-row">
+        <div class="award-badge"></div>
+        <div class="award-badge-2"></div>
+      </div>
   </div>
   
 </div>
@@ -14,7 +17,7 @@
         "id": "awards-title",
         "type": "textarea",
         "label": "Award block title",
-        "default":"we know you’re a superhero.<br> We’ll help you look like one, too."
+        "default":"consistent winner of the client experience award"
       }
     ],
     "presets": [
